versioned_docs/version-2025.2.5/professor/tiago_amaral_silva.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Tiago Amaral Silva",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Educação Física I - 2323",
          "size": 2,
          "teachers": [
            "Tiago Amaral Silva"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "COM2026"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Educação Física I - 2577",
          "size": 2,
          "teachers": [
            "Tiago Amaral Silva"
          ],
          "classroom": "",
          "students": [
            "MEC2026"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Educação Física II - 2419",
          "size": 2,
          "teachers": [
            "Tiago Amaral Silva"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "COM2025"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Projeto Integrador I - 2334",
          "size": 1,
          "teachers": [
            "Tiago Amaral Silva"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "COM2025"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Projeto Integrador II - 2430",
          "size": 1,
          "teachers": [
            "Tiago Amaral Silva"
          ],
          "classroom": "laboratorio_de_informatica_b",
          "students": [
            "COM2024"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Projeto Integrador I - 2334",
          "size": 1,
          "teachers": [
            "Tiago Amaral Silva"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "COM2025"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Projeto Integrador III - 2465",
          "size": 1,
          "teachers": [
            "Tiago Amaral Silva"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "COM2023"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Trabalho de conclusão de curso I - 484",
          "size": 2,
          "teachers": [
            "Jhones Donizetti Mendes",
            "Tiago Amaral Silva"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "BIO_ESPECIAL_2"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Trabalho de conclusão de curso II - 1420",
          "size": 1,
          "teachers": [
            "Jhones Donizetti Mendes",
            "Tiago Amaral Silva"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "BIO_ESPECIAL_2"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": []
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Tiago Amaral Silva

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

<div style={{
  border: '1px solid #ddd',
  borderRadius: '8px',
  padding: '16px',
  marginTop: '24px',
  backgroundColor: '#f9f9f9'
}}>
  <h2 style={{
    borderBottom: '2px solid #ccc',
    paddingBottom: '8px',
    marginBottom: '16px'
  }}>Informações do Docente</h2>
  <p><strong>Cargo/Função:</strong> {data.teacherInfo.role}</p>
  <p><strong>Horário de Atendimento aos Alunos:</strong> {data.teacherInfo.officeHours}</p>
  <p><strong>Observações:</strong> {data.teacherInfo.notes}</p>
</div>

